# xmc4-hal

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  index.html  memory.x  renovate.json
.cargo/: config
.dependabot/: config.yml
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  bloat.yml  ci.yml  clippy.yml  coverage.yml  devices.yml  doc-publish.yml  docs.yml  examples.yml  fmt.yml  publish.yml  rust.yml  shiftleft-analysis.yml  test.yml  todo.yml
examples/: rtc.rs  watchdog.rs
master/: aliases.js  search-index.js  settings.html  source-files.js
master/aligned/: struct.A16.html  struct.A2.html  struct.A4.html  struct.A8.html  struct.Aligned.html
master/bare_metal/: struct.CriticalSection.html  struct.Mutex.html  struct.Peripheral.html
master/cast/: enum.Error.html  fn.f32.html  fn.f64.html  fn.i16.html  fn.i32.html  fn.i64.html  fn.i8.html  fn.isize.html  fn.u16.html  fn.u32.html  fn.u64.html  fn.u8.html  fn.usize.html  index.html  trait.From.html
master/cortex_m/: all.html
master/cortex_m/interrupt/: struct.CriticalSection.html  struct.Mutex.html
master/cortex_m/peripheral/: index.html  struct.CBP.html  struct.CPUID.html  struct.DCB.html  struct.DWT.html  struct.FPB.html  struct.FPU.html  struct.ITM.html  struct.MPU.html  struct.NVIC.html  struct.Peripherals.html  struct.SCB.html  struct.SYST.html  struct.TPIU.html
master/cortex_m_rt/: all.html  attr.entry.html  attr.exception.html  attr.pre_init.html  struct.ExceptionFrame.html
master/cortex_m_rt_macros/: all.html
master/embedded_hal/: all.html  enum.Direction.html  index.html  trait.Capture.html  trait.Pwm.html  trait.PwmPin.html  trait.Qei.html
master/embedded_hal/adc/: index.html  trait.Channel.html  trait.OneShot.html
master/embedded_hal/blocking/: index.html
master/embedded_hal/digital/: index.html
master/embedded_hal/fmt/: index.html
master/embedded_hal/prelude/: index.html
master/embedded_hal/serial/: index.html  trait.Read.html  trait.Write.html
master/embedded_hal/spi/: constant.MODE_0.html  constant.MODE_1.html  constant.MODE_2.html  constant.MODE_3.html  enum.Phase.html  enum.Polarity.html  index.html  struct.Mode.html  trait.FullDuplex.html
master/embedded_hal/timer/: index.html  trait.Cancel.html  trait.CountDown.html  trait.Periodic.html
master/embedded_hal/watchdog/: index.html  trait.Watchdog.html  trait.WatchdogDisable.html  trait.WatchdogEnable.html
master/generic_array/: struct.GenericArray.html
master/generic_array/iter/: struct.GenericArrayIter.html
master/nb/: all.html  enum.Error.html  index.html  macro.await.html  macro.block.html  macro.try_nb.html  type.Result.html
master/rand/: enum.ErrorKind.html  struct.AsciiGenerator.html  struct.Error.html  struct.Generator.html
master/rand/distributions/: struct.Alphanumeric.html  struct.Bernoulli.html  struct.DistIter.html  struct.Open01.html  struct.OpenClosed01.html  struct.Standard.html  struct.Uniform.html  struct.Weighted.html  struct.WeightedChoice.html
master/rand/prng/: struct.XorShiftRng.html
master/rand/rngs/: enum.TimerError.html  struct.JitterRng.html  struct.SmallRng.html  struct.StdRng.html
master/rand_core/: enum.ErrorKind.html  struct.Error.html
master/rand_core/block/: struct.BlockRng.html  struct.BlockRng64.html
master/src/aligned/: lib.rs.html  sealed.rs.html
master/src/as_slice/: lib.rs.html
master/src/bare_metal/: lib.rs.html
master/src/cast/: lib.rs.html
master/src/cortex_m/: asm.rs.html  interrupt.rs.html  itm.rs.html  lib.rs.html  macros.rs.html
master/src/cortex_m_rt/: lib.rs.html
master/src/cortex_m_rt_macros/: lib.rs.html
master/src/embedded_hal/: adc.rs.html  fmt.rs.html  lib.rs.html  prelude.rs.html  serial.rs.html  spi.rs.html  timer.rs.html  watchdog.rs.html
master/src/generic_array/: arr.rs.html  functional.rs.html  hex.rs.html  impls.rs.html  iter.rs.html  lib.rs.html  sequence.rs.html
master/src/nb/: lib.rs.html
master/src/proc_macro2/: fallback.rs.html  lib.rs.html  strnom.rs.html  wrapper.rs.html
master/src/quote/: ext.rs.html  lib.rs.html  runtime.rs.html  to_tokens.rs.html
master/src/r0/: lib.rs.html
master/src/rand/: lib.rs.html  prelude.rs.html
master/src/rand_core/: block.rs.html  error.rs.html  impls.rs.html  le.rs.html  lib.rs.html
master/src/stable_deref_trait/: lib.rs.html
master/src/syn/: attr.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  file.rs.html  generics.rs.html  group.rs.html  (+22 more)
master/syn/: enum.BinOp.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericMethodArgument.html  enum.ImplItem.html  enum.Item.html  enum.Pat.html  enum.RangeLimits.html  enum.Stmt.html  enum.TraitItem.html  enum.Type.html  enum.UseTree.html  struct.ArgCaptured.html  struct.ArgSelf.html  struct.ArgSelfRef.html  struct.Arm.html  struct.Block.html  struct.Constraint.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprInPlace.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLoop.html  struct.ExprMacro.html  (+76 more)
master/typenum/: macro.op.html  struct.Equal.html  struct.Greater.html  struct.Less.html
master/vcell/: struct.VolatileCell.html
master/void/: enum.Void.html
master/volatile_register/: struct.RO.html  struct.RW.html  struct.WO.html
master/xmc4_hal/: all.html  index.html  sidebar-items.js
src/: can.rs  ccu40.rs  ccu80.rs  dac.rs  delay.rs  dlr.rs  ecat.rs  eru.rs  fce.rs  flash.rs  gpdma.rs  gpio.rs  hrpwm.rs  ledts.rs  lib.rs  macros.rs  pba.rs  pmu.rs  port.rs  posif.rs  ppb.rs  pref.rs  rtc.rs  scu.rs  sdmmc.rs  time.rs  usb.rs  usic.rs  vadc.rs  wdt.rs
(+3623 files in other folders)
