[package]
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
edition = "2018"
name = "xmc4-hal"
version = "0.0.1"
readme = "README.md"
license = "MIT"
repository = "https://github.com/xmc-rs/xmc4-hal"
description = "Peripheral access API for XMC4 series microcontrollers"
documentation = "https://docs.rs/crate/xmc4-hal"
categories = [
    "embedded",
    "hardware-support",
    "no-std"
]
keywords = [
    "arm",
    "cortex-m",
    "hal",
    "xmc"
]

[package.metadata.docs.rs]
features = ["xmc41xx"]

[dependencies]
xmc4100 = { version = "0.5.0", optional = true }
xmc4200 = { version = "0.5.0", optional = true }
xmc4300 = { version = "0.5.0", optional = true }
xmc4400 = { version = "0.5.0", optional = true }
xmc4500 = { version = "0.5.0", optional = true }
xmc4700 = { version = "0.5.0", optional = true }
xmc4800 = { version = "0.5.0", optional = true }
cortex-m = "0.7.4"
nb = "1.0.0"
cortex-m-rt = "0.7.1"

[features]
device-selected = []
xmc41xx = ["xmc4100", "device-selected"]
xmc42xx = ["xmc4200", "device-selected"]
xmc43xx = ["xmc4300", "device-selected", "ecat", "sdmmc"]
xmc44xx = ["xmc4400", "device-selected"]
xmc45xx = ["xmc4500", "device-selected", "sdmmc"]
xmc47xx = ["xmc4700", "device-selected", "sdmmc"]
xmc48xx = ["xmc4800", "device-selected", "ecat", "sdmmc"]
ecat = []
sdmmc = []

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.3.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.7"

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
panic-itm = "0.4.2"
cortex-m-rtfm = "0.5.3"
cortex-m-semihosting = "0.5.0"
heapless = "0.7.10"
libm = "0.2.2"
as-slice = "0.2.1"

[dev-dependencies.byteorder]
default-features = false
version = "1.4.3"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
version = "1.6.1"

[[example]]
name = "watchdog"
required-features = ["xmc4100"]
